Check for existence of /etc/qcontrol.conf instead of checking /proc/cpuinfo
Ian mentioned the packaging only creates /etc/qcontrol.conf if the
machine is supported.

--- a/qcontrol.service
+++ b/qcontrol.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=qcontrol
+# If the config file is there, we assume qcontrol works on this machine.
+ConditionPathExists=/etc/qcontrol.conf
 
 [Service]
 Type=oneshot
 RemainAfterExit=true
-# qcontrol only works on some devices, so verify this system is supported.
-ExecStartPre=/bin/grep -q 'Hardware[[:space:]]*: QNAP TS-\(109/TS-209\|119/TS-219\|409\|41x\)' /proc/cpuinfo
 ExecStart=/usr/sbin/qcontrol statusled greenon
 ExecStart=/usr/sbin/qcontrol powerled on
 ExecStart=/usr/sbin/qcontrol buzzer short
