Update systemd service files.
For qcontrold correct the encoding of /dev/input/by-path/platform-gpio_keys-event
used in Requires=/After= and mark as wanted by the multi-user target.

For qcontrol mark it as requiring and after the qcontrold service, also mark as
after the multi-user target so it happens towards the end of boot.

--- a/systemd/qcontrol.service
+++ b/systemd/qcontrol.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=qcontrol
+Requires=qcontrold.service
+After=multi-user.target qcontrold.service
 # If the config file is there, we assume qcontrol works on this machine.
 ConditionPathExists=/etc/qcontrol.conf
 
